--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ djangorestframework = "^3.14.0"
 python-dotenv = "^0.21.0"
 psycopg2 = "^2.9.5"
 django-loguru = "^1.0.3"
+flake8 = "^6.0.0"
+pytest = "^7.2.0"
 
 
 [build-system]
