--- a/.github/workflows/backend.development.yml
+++ b/.github/workflows/backend.development.yml
@@ -24,13 +24,6 @@ jobs:
         path: ~/.local
         key: poetry-1.2.1
 
-    # testing not sure if this is needed or will work
-    - uses: snok/install-poetry@v1
-      with:
-        version: 1.2.1
-        virtualenvs-create: true
-        virtualenvs-in-project: true
-
     - name: cache deps
       id: cache-deps
       uses: actions/cache@v3
@@ -42,17 +35,13 @@ jobs:
       working-directory: ./backend
       if: steps.cache-deps.outputs.cache-hit != 'true' || github.event.inputs.useCache == 'no'
 
-
     - name: run tests
-      run: poetry run pytest . --cov=app
-#      run: python backend/manage.py test
+      run: poetry run pytest .
       working-directory: ./backend
-
     - name: ensure test coverage
       run: poetry run coverage report --fail-under=76
       working-directory: ./backend
 
-    # not sure where to put linter here or in a different workflow
     - name: lint code
       run: poetry run black . --check
       working-directory: ./backend
