--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -68,7 +68,8 @@ jobs:
 
       # And finally run tests. I'm using pytest and all my pytest config is in my `pyproject.toml`
       # so this line is super-simple. But it could be as complex as you need.
-      - run: poetry run backend/manage.py test
-
-      - run: poetry run coverage report --fail-under=76
+      - run: poetry run python manage.py test
         working-directory: ./backend
+
+#      - run: poetry run coverage report --fail-under=76
+#        working-directory: ./backend
