--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -45,5 +45,5 @@ jobs:
       - run: poetry run python ./backend/manage.py test
 
 
-#      - run: poetry run coverage report --fail-under=76
-#        working-directory: ./backend
+      - run: poetry run coverage report --fail-under=76
+        working-directory: ./backend
