--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ flake8 = "^6.0.0"
 pytest = "^7.2.0"
 
 
+[tool.poetry.group.dev.dependencies]
+coverage = {extras = ["toml"], version = "^7.0.5"}
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
