--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -1,2 +1,16 @@
-- name: Super-Linter
-  uses: github/super-linter@v4.10.0
+name: Linter
+
+on: [push]
+
+jobs:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Install dependencies
+      run: pip install flake8
+
+    - name: Run linting
+      run: flake8 --config=.flake8
