--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,1 +1,34 @@
+version: '3.9'
 
+services:
+  db:
+    container_name: db
+    image: postgres:15.1-alpine
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    ports:
+        - "5432:5432"
+    networks:
+      - tylkozapytam
+      -
+  backend:
+    container_name: backend
+    build:
+      context: ./backend
+      dockerfile: ./backend/Dockerfile
+    ports:
+      - "8000:8000"
+    volumes:
+        - ./backend/app:/app
+    env_file:
+        - .env.development
+    networks:
+      - tylkozapytam
+    depends_on:
+        - db
+
+
+networks:
+  tylkozapytam:
