--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ psycopg2 = "^2.9.5"
 django-loguru = "^1.0.3"
 flake8 = "^6.0.0"
 pytest = "^7.2.0"
+drf-spectacular = "^0.25.1"
+pillow = "^9.4.0"
+factory-boy = "^3.2.1"
+black = "^22.12.0"
 
 
 [build-system]
