--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -42,5 +42,6 @@ jobs:
 
       - run: poetry install --no-interaction
 
-      - run: poetry run python ./backend/manage.py test
+      - run: poetry run python ./backend/manage.py test app
+      - run: poetry run python ./backend/manage.py test users
 
