backend/create-db-models (#5)
Created intial models, tests, serializers, swagger, logger

--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -9,6 +9,17 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: pytania
+        ports:
+          - 5432:5432
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
       - uses: actions/checkout@v2
 
@@ -42,5 +53,9 @@ jobs:
 
       - run: poetry install --no-interaction
 
-      - run: poetry run python ./backend/manage.py test
+      - name: make migrations
+        run: poetry run python ./backend/manage.py makemigrations && poetry run python ./backend/manage.py migrate
+
+      - run: poetry run python ./backend/manage.py test app
+      - run: poetry run python ./backend/manage.py test users
 
