--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -21,15 +21,15 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         with:
           python-version: 3.9
 
       - name: cache poetry install
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: ~/.local
           key: poetry-1.1.12-0
@@ -42,7 +42,7 @@ jobs:
 
       - name: cache deps
         id: cache-deps
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: .venv
           key: pydeps-${{ hashFiles('**/poetry.lock') }}
@@ -56,6 +56,5 @@ jobs:
       - name: make migrations
         run: poetry run python ./backend/manage.py makemigrations && poetry run python ./backend/manage.py migrate
 
-      - run: poetry run python ./backend/manage.py test app
-      - run: poetry run python ./backend/manage.py test users
-
+      - name: run tests
+        run: poetry run python ./backend/manage.py test app && poetry run python ./backend/manage.py test users
