--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ pillow = "^9.4.0"
 factory-boy = "^3.2.1"
 black = "^22.12.0"
 isort = "^5.11.4"
+django-cors-headers = "^3.13.0"
+django-allauth = "^0.52.0"
 
 
 [build-system]
