--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,15 @@
+
 FROM python:3.9.10
 ENV PYTHONUNBUFFERED 1
 
 WORKDIR /backend
 COPY poetry.lock pyproject.toml /backend/
 
-RUN poetry install --no-interaction --no-ansi
+RUN pip install poetry
 
-COPY . /backend
+RUN poetry config virtualenvs.create true && poetry config virtualenvs.in-project true
+RUN poetry install --no-dev
+COPY ./backend /backend
+
 
 EXPOSE 8000
-
-CMD ["poetry", "run", "python", "manage.py", "runserver", "0.0.0.0:8000"]
-
-
-
