--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 version: '3.9'
 
 services:
@@ -8,15 +9,18 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST_AUTH_METHOD=trust
     ports:
         - "5432:5432"
+    volumes:
+      - ./db_data:/var/lib/postgresql/data
     networks:
       - tylkozapytam
-      -
+
   backend:
     container_name: backend
     build:
-      context: ./backend
+      context: .
       dockerfile: ./backend/Dockerfile
     ports:
       - "8000:8000"
