--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ black = "^22.12.0"
 isort = "^5.11.4"
 django-cors-headers = "^3.13.0"
 django-allauth = "^0.52.0"
+gunicorn = "^20.1.0"
 
 
 [build-system]
