--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,4 +30,4 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.exclude]
-loguru = "*"
+packages = ["loguru"]
