--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -21,7 +21,7 @@ services:
     container_name: backend
     build:
       context: .
-      dockerfile: ./backend/Dockerfile
+      dockerfile: deployment/backend/Dockerfile
     ports:
       - "8000:8000"
     volumes:
