--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -37,11 +37,11 @@ jobs:
         uses: actions/cache@v3
         with:
           path: ~/.local
-          key: poetry-1.1.12-0
+          key: poetry-1.2.1
 
       - uses: snok/install-poetry@v1
         with:
-          version: 1.1.12
+          version: 1.2.1
           virtualenvs-create: true
           virtualenvs-in-project: true
 
@@ -49,14 +49,16 @@ jobs:
         id: cache-deps
         uses: actions/cache@v3
         with:
-          path: .venv
+          path: ./backend/.venv
           key: pydeps-${{ hashFiles('**/poetry.lock') }}
 
       - run: poetry install --no-interaction --no-root
+        working-directory: ./backend
         if: steps.cache-deps.outputs.cache-hit != 'true'
 
 
       - run: poetry install --no-interaction
+        working-directory: ./backend
 
       - name: make migrations
         run: poetry run python ./backend/manage.py makemigrations app && 
