--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -10,10 +10,9 @@ jobs:
       postgres:
         image: postgres
         env:
-          # TODO change env to github secrets
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: pytania
+          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
         ports:
           - 5432:5432
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
@@ -69,7 +68,7 @@ jobs:
       - name: run tests
         working-directory: ./backend
         env:
-          SECRET_KEY: test-secret-key
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: poetry run python manage.py test app && 
           poetry run python manage.py test users
 
